fixed familyBar overlap and improved aesthetic of familybar and  id label placement

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -108,6 +108,13 @@ ul.nav.navbar-nav{
   fill:#ececec;
 }
 
+.familyBar{
+  // width:5px;
+  stroke-width: 5px;
+  stroke:rgb(25, 25, 25);
+  // fill:rgb(25, 25, 25);
+}
+
 #loading{
   position:absolute;
   width:100%;
